refactor: use english comments in styles & html/svg

--- a/src/assets/styles/404.css
+++ b/src/assets/styles/404.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400');
 
+/* Separate small style sheet for the 404 page */
+
 html,
 body {
   margin: 0;
