--- a/src/assets/styles/article.css
+++ b/src/assets/styles/article.css
@@ -196,7 +196,7 @@
   width: 100%;
   max-width: 100%;
   box-sizing: border-box;
-  padding: 0 1em;
+  padding: 0.5em 1em 0;
   line-height: 1.9;
   margin: -1.5rem 0 1.5rem;
   color: #999999;
